# CMakeDemo1

./: .gitignore  CMakeLists.txt  License.txt  README.md  config.h.in  main.cpp
calculate/: CMakeLists.txt  MyMath.cpp  MyMath.h
